versioned_docs/version-2025.2.5/professor/beatriz_de_souza_goncalves_proenca.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Beatriz de Souza Gonçalves Proença",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Bromatologia dos Alimentos - 2378",
          "size": 4,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia do Pescado, Mel e Ovos - 2376",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Embalagens de Alimentos - 2385",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Processamento e pós-colheita de produtos vegetais - 2380",
          "size": 4,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Controle de Qualidade e Higienização na Indústria Alimentícia - 2384",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Controle de Qualidade e Higienização na Indústria Alimentícia - 2384",
          "size": 1,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAL2024"
          ],
          "time": "19:50 - 20:40",
          "color": ""
        },
        {
          "subject": "Microbiologia dos Alimentos - 2371",
          "size": 1,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        },
        {
          "subject": "Tecnologia do Pescado, Mel e Ovos - 2376",
          "size": 1,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:50 - 22:40",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Análise Sensorial - 2377",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia do Leite e Derivados - 2375",
          "size": 4,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia de bebidas - 2381",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Tecnologia de massas e panifícios - 2383",
          "size": 3,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Microbiologia dos Alimentos - 2371",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "TAL2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Tecnologia de Glicídios e Lipídios - 2374",
          "size": 2,
          "teachers": [
            "Beatriz de Souza Gonçalves Proença"
          ],
          "classroom": "sala_16-2",
          "students": [
            "TAL2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Beatriz de Souza Gonçalves Proença

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

